cargo-features = ["codegen-backend"]

[package]
name = "bevy_pg_terrain_editor_tools"
version = "0.1.0"
authors = ["Patrick Chodowski <chodowski.patrick@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Second approach to terrain editor tooling"
resolver = "2"

[dependencies]
bevy = { version = "0.17", default-features = true}
bevy_pg_editor_tools = {path = "../bevy_pg_editor_tools"}
bevy_enhanced_input = "0.19.3"

# Compile low-severity logs out of native builds for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
libm = "0.2.11"
strsim = "0.10.0"
noise = "0.9.0"
rand="0.9.0"
pennereq = "0.3.1"

[profile.dev]
opt-level = 1
